compiler-core/main/__core/type_/tests/snapshots/gleam_core____core__type___tests__warnings__pure_pipeline_with_many_steps_raises_warning.snap
---
source: compiler-core/src_refactored/__core/type_/tests/warnings.rs
assertion_line: 3457
expression: "\nfn add(a, b) { a + b }\n\npub fn main() {\n  1 |> add(2) |> add(3) |> add(4)\n  Nil\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

fn add(a, b) { a + b }

pub fn main() {
  1 |> add(2) |> add(3) |> add(4)
  Nil
}


----- WARNING
warning: Unused value
  ┌─ /src/warning/wrn.gleam:5:3
  │
5 │   1 |> add(2) |> add(3) |> add(4)
  │   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ This value is never used

This expression computes a value without any side effects, but then the
value isn't used at all. You might want to assign it to a variable, or
delete the expression entirely if it's not needed.
