compiler-core/main/__core/type_/tests/snapshots/gleam_core____core__type___tests__warnings__reachable_pattern_after_unreachable_equal_pattern.snap
---
source: compiler-core/src_refactored/__core/type_/tests/warnings.rs
assertion_line: 4563
expression: "\npub fn wibble(bits) {\n  case bits {\n    <<97:3>> -> 1\n    <<\"a\">> -> 2\n    _ -> 3\n  }\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

pub fn wibble(bits) {
  case bits {
    <<97:3>> -> 1
    <<"a">> -> 2
    _ -> 3
  }
}


----- WARNING
warning: Unreachable pattern
  ┌─ /src/warning/wrn.gleam:4:5
  │
4 │     <<97:3>> -> 1
  │     ^^^^^^^^
  │       │
  │       A 3 bits unsigned integer will never match this value

This pattern cannot be reached as it contains segments that will never
match.

Hint: It can be safely removed.
