compiler-core/main/__core/type_/tests/snapshots/gleam_core____core__type___tests__warnings__record_access_variant_inference_requires_v1_6.snap
---
source: compiler-core/src_refactored/__core/type_/tests/warnings.rs
assertion_line: 2652
expression: "\npub type Wibble {\n  Wibble(a: Int, b: Int)\n  Wobble(a: Int, c: Int)\n}\n\npub fn main(wibble) {\n  case wibble {\n    Wibble(..) -> wibble.b\n    Wobble(..) -> wibble.c\n  }\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

pub type Wibble {
  Wibble(a: Int, b: Int)
  Wobble(a: Int, c: Int)
}

pub fn main(wibble) {
  case wibble {
    Wibble(..) -> wibble.b
    Wobble(..) -> wibble.c
  }
}


----- WARNING
warning: Incompatible gleam version range
  ┌─ /src/warning/wrn.gleam:9:26
  │
9 │     Wibble(..) -> wibble.b
  │                          ^ This requires a Gleam version >= 1.6.0

Field access on custom types when the variant is known was introduced in
version v1.6.0. But the Gleam version range specified in your `gleam.toml`
would allow this code to run on an earlier version like v1.0.0, resulting
in compilation errors!
Hint: Remove the version constraint from your `gleam.toml` or update it to be:

    gleam = ">= 1.6.0"

warning: Incompatible gleam version range
   ┌─ /src/warning/wrn.gleam:10:26
   │
10 │     Wobble(..) -> wibble.c
   │                          ^ This requires a Gleam version >= 1.6.0

Field access on custom types when the variant is known was introduced in
version v1.6.0. But the Gleam version range specified in your `gleam.toml`
would allow this code to run on an earlier version like v1.0.0, resulting
in compilation errors!
Hint: Remove the version constraint from your `gleam.toml` or update it to be:

    gleam = ">= 1.6.0"
